Bug 847194 - Protect mCodecStates from concurrent accesses. r=cpearce